--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "i18next": "^20.0.0",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
+    "react-countdown-circle-timer": "^2.5.1",
     "react-dom": "^17.0.1",
     "react-i18next": "^11.8.10",
     "react-redux": "^7.2.2",
